using classes better

--- a/build.xml
+++ b/build.xml
@@ -5,7 +5,7 @@
   <property name="classes.dir" value="${build.dir}/classes"/>
   <property name="jar.dir" value="${build.dir}/jar"/>
 
-  <property name="main-class" value="chess.uciCom"/>
+  <property name="main-class" value="chess.BendeChess"/>
 
 
   <target name="clean">
